# ProjectEuler

./: README.md  awards.txt  phistuff.c  simpletons.txt  targets
solutions/.C/: scrub.sh
solutions/.C/_p0075/: makefile  s0075.c
solutions/.C/_p0083/: s0083.c
solutions/.C/_p0096/: makefile  out.data
solutions/.C/_p0433/: makefile
solutions/.C/p0001/: makefile  s0001.c
solutions/.C/p0002/: s0002.c
solutions/.C/p0003/: s0003.c
solutions/.C/p0004/: s0004.c
solutions/.C/p0005/: s0005.c
solutions/.C/p0006/: makefile  s0006.c
solutions/.C/p0007/: makefile  s0007.c
solutions/.C/p0008/: makefile  s0008.c
solutions/.C/p0009/: makefile  s0009.c
solutions/.C/p0010/: makefile  s0010.c
solutions/.C/p0011/: makefile  s0011.c
solutions/.C/p0012/: s0012.c
solutions/.C/p0013/: makefile  s0013.c
solutions/.C/p0014/: s0014.c
solutions/.C/p0015/: s0015.c
solutions/.C/p0016/: makefile  s0016.c
solutions/.C/p0017/: s0017.c
solutions/.C/p0019/: s0019.c
solutions/.C/p0020/: makefile  s0020.c
solutions/.C/p0021/: makefile  s0021.c
solutions/.C/p0022/: makefile  s0022.c
solutions/.C/p0023/: makefile  s0023.c
solutions/.C/p0024/: makefile  s0024.c
solutions/.C/p0025/: makefile  s0025.c
solutions/.C/p0027/: makefile  s0027.c
solutions/.C/p0028/: makefile
solutions/.C/p0029/: makefile  s0029.c
solutions/.C/p0030/: makefile
solutions/.C/p0032/: s0032.c
solutions/.C/p0033/: makefile
solutions/.C/p0035/: makefile  s0035.c
solutions/.C/p0036/: makefile  s0036.c
solutions/.C/p0044/: makefile
solutions/.C/p0046/: makefile  s0046.c
solutions/.C/p0050/: makefile  s0050.c
solutions/.C/p0056/: makefile  s0056.c
solutions/.C/p0063/: s0063.c
solutions/.C/p0069/: makefile  s0069.c
solutions/.C/p0070/: makefile  s0070.c
solutions/.C/p0071/: makefile  s0071.c
solutions/.C/p0072/: s0072.c
solutions/.C/p0074/: s0074.c
solutions/.C/p0080/: makefile
solutions/.C/p0081/: makefile
solutions/.C/p0082/: makefile  s0082.c
solutions/.C/p0085/: makefile
solutions/.C/p0087/: makefile  s0087.c
solutions/.C/p0091/: s0091.c
solutions/.C/p0100/: makefile
solutions/.C/p0104/: s0104.c
solutions/.C/p0112/: s0112.c
solutions/.C/p0121/: makefile  s0121.c
solutions/.C/p0243/: makefile
solutions/.Haskell/p0001/: s0001.hs
solutions/.Haskell/p0002/: s0002.hs
solutions/.Haskell/p0003/: s0003.hs
solutions/.Haskell/p0005/: makefile  s0005.hs
solutions/.Haskell/p0006/: s0006.hs
solutions/.Haskell/p0007/: makefile
solutions/.Haskell/p0009/: makefile  s0009.hs
solutions/.Haskell/p0010/: s0010.hs
solutions/.Haskell/p0013/: makefile  s0013.hs
solutions/.Haskell/p0075/: makefile  s0075.hs
solutions/C/: _scrub.sh
solutions/C/_p0083/: makefile
solutions/C/_p0096/: s0096.c
solutions/C/_p0432/: makefile  s0432.c
solutions/C/_p0433/: s0433.c  t0433.c
solutions/C/p0001/: makefile  s0001.c
solutions/C/p0002/: makefile  s0002.c
solutions/C/p0003/: makefile  s0003.c
solutions/C/p0004/: makefile  s0004.c
solutions/C/p0005/: makefile  s0005.c
solutions/C/p0006/: s0006.c
solutions/C/p0007/: makefile  s0007.c
solutions/C/p0008/: s0008.c
solutions/C/p0009/: s0009.c
solutions/C/p0010/: makefile  s0010.c
solutions/C/p0011/: s0011.c
solutions/C/p0012/: makefile  s0012.c
solutions/C/p0013/: s0013.c
solutions/C/p0014/: makefile  s0014.c
solutions/C/p0015/: makefile  s0015.c
solutions/C/p0016/: s0016.c
solutions/C/p0017/: makefile  s0017.c
solutions/C/p0018/: makefile  s0018.c
solutions/C/p0019/: makefile  s0019.c
solutions/C/p0020/: s0020.c
solutions/C/p0021/: makefile  s0021.c
solutions/C/p0022/: makefile  s0022.c
solutions/C/p0023/: ans-0023  makefile  s0023.c
solutions/C/p0024/: ans-0024  s0024.c
solutions/C/p0025/: ans-0025  s0025.c
solutions/C/p0028/: s0028.c
solutions/C/p0030/: s0030.c
solutions/C/p0032/: makefile
solutions/C/p0033/: s0033.c
solutions/C/p0034/: makefile  s0034.c
solutions/C/p0035/: s0035.c
solutions/C/p0036/: makefile  s0036.c
solutions/C/p0037/: makefile  s0037.c
solutions/C/p0038/: makefile  s0038.c
solutions/Haskell/: Main.hs  ProjectEuler.cabal  ProjectEuler.hs  README.md  TestSuite.hs  makefile  scrub.sh  stack.yaml
solutions/Haskell/ProjectEuler/: Awards.hs  GlobalTestSuite.hi  GlobalTestSuite.hs  Input.hs  Problem_0001.hs  Problem_0002.hs  Problem_0003.hs  Problem_0086.hs  Problem_0205.hs  Problem_0206.hs
solutions/Haskell/ProjectEuler/Internal/: Input.hs  Parameters.hs  ProblemNumber.hs  Task.hs
solutions/Haskell/ProjectEuler/Problem_0001/: Answer.hs  Main.hs  Meta.hs  Solution.hi  Solution.hs  Test  Test.hi  Test.hs  makefile
solutions/Haskell/ProjectEuler/Problem_0002/: Solution.hs  Test.hs
solutions/Haskell/ProjectEuler/Problem_0003/: Solution.hs
solutions/Haskell/ProjectEuler/Problem_0086/: Solution.hs  Solution.hs~
solutions/Haskell/ProjectEuler/Problem_0090/: Solution.hs  Solution.hs~
solutions/Haskell/ProjectEuler/Problem_0205/: Solution.hs
solutions/Haskell/ProjectEuler/Problem_0206/: Solution.hs  Solution.hs~
solutions/Haskell/ProjectEuler/Problem_0231/: Solution.hs
solutions/Haskell/ProjectEuler/Problem_0684/: Solution.hs
solutions/Haskell/ProjectEuler/Problem_0808/: Solution.hs  Solution.hs~
solutions/Haskell/p0001/: makefile  s0001.hs
solutions/Haskell/p0002/: makefile  s0002.hs
solutions/Haskell/p0003/: makefile  s0003.hs
solutions/Haskell/p0004/: makefile  s0004.hs
solutions/Haskell/p0005/: makefile  s0005.hs
solutions/Haskell/p0006/: makefile  s0006.hs
solutions/Haskell/p0007/: makefile  s0007.hs
solutions/Haskell/p0008/: makefile  s0008.hs
solutions/Haskell/p0009/: makefile  s0009.hs
solutions/Haskell/p0010/: makefile  s0010.hs
solutions/Haskell/p0012/: ans-0012.prof  makefile  s0012.hi  s0012.hs
solutions/Haskell/p0013/: makefile  s0013.hs
solutions/Haskell/p0014/: makefile  s0014.hs
solutions/Haskell/p0015/: s0015.hs
solutions/Haskell/p0026/: makefile  s0026.hs
solutions/Haskell/p0031/: s0031.hs
solutions/Haskell/p0075/: makefile  s0075.hs
(+46 files in other folders)
