name:                ProjectEuler
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Solutions to the Project Euler problem set
description:         Solutions to the Project Euler problem set
homepage:            projecteuler.net
license:             GPL-3
license-file:        LICENSE
author:              Alex Washburn
maintainer:          project.euler@recursion.ninja
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable euler
  main-is:	Main.hs
  -- Other library packages from which modules are imported.
  build-depends: arithmoi     ==0.4.*
               , base         >=4.7
               , containers   ==0.5.*
               , regex-compat ==0.95.*
               , regex-base   ==0.93.*
               , safe         ==0.3.*
  ghc-options:	-O2 -Wall -Werror
                -fwarn-duplicate-exports
                -fwarn-incomplete-patterns
                -fwarn-missing-signatures
                -fwarn-overlapping-patterns
                -fwarn-tabs
                -fwarn-unused-binds
                -fwarn-unused-do-bind
                -fwarn-unused-imports
                -fwarn-unused-matches

 
Test-Suite euler-testsuite
  type:   	 exitcode-stdio-1.0
  main-is: 	 TestSuite.hs
  build-depends: base >=4.7, containers ==0.5.*, QuickCheck
