cabal-version: 3.8
name:                ProjectEuler
version:             0.1.0.0
synopsis:            Solutions to the Project Euler problem set
description:         Solutions to the Project Euler problem set
homepage:            projecteuler.net
--license:             GPL-3
--license-file:        LICENSE
author:              Alex Washburn
maintainer:          project.euler@recursion.ninja
-- copyright:           
category:            Math
build-type:          Simple


common build-defaults

  default-extensions:
    DerivingStrategies

  default-language:
    GHC2021

  ghc-options:
    -O2
    -Wall
--    -Werror
    -fwarn-duplicate-exports
    -fwarn-incomplete-patterns
    -fwarn-missing-signatures
    -fwarn-overlapping-patterns
    -fwarn-tabs
    -fwarn-unused-binds
    -fwarn-unused-do-bind
    -fwarn-unused-imports
    -fwarn-unused-matches


executable euler

  import:
    build-defaults

  main-is:
    Main.hs

  -- Other library packages from which modules are imported.
  build-depends:
    arithmoi >=0.4.2,
    base >=4.7,
    containers,
    keys,
    mono-traversable,
    regex-compat,
    regex-base,
    safe,
    vector,

  other-modules:
    ProjectEuler
    ProjectEuler.Internal.Parameters
    ProjectEuler.Internal.ProblemNumber
    ProjectEuler.Internal.Task
    ProjectEuler.Problem_0001
    ProjectEuler.Problem_0001.Solution
    ProjectEuler.Problem_0002
    ProjectEuler.Problem_0002.Solution
    ProjectEuler.Problem_0003
    ProjectEuler.Problem_0003.Solution
    ProjectEuler.Problem_0086
    ProjectEuler.Problem_0086.Solution
    ProjectEuler.Problem_0090
    ProjectEuler.Problem_0090.Solution


Test-Suite euler-testsuite
  type:
    exitcode-stdio-1.0
  main-is:
    TestSuite.hs
  build-depends:
    base >=4.7,
    containers >= 0.5,
    QuickCheck,


Library p0205

  import:
    build-defaults

  build-depends:
    arithmoi >=0.4.2,
    array,
    base >=4.7,
    containers,
    multiset,

  exposed-modules:
--    ProjectEuler.Problem_0205
    ProjectEuler.Problem_0205.Solution


Executable s0206

  import:
    build-defaults

  build-depends:
    base >=4.7,
    containers,

  ghc-options:
    -O2

  main-is:
    ProjectEuler/Problem_0206.hs

  other-modules:
    ProjectEuler.Problem_0206.Solution


Library p0206

  import:
    build-defaults

  build-depends:
    base >=4.7,
    containers,

  exposed-modules:
    ProjectEuler.Problem_0206.Solution


Library p0231

  import:
    build-defaults

  build-depends:
    arithmoi >= 0.13.0.0,
    base >=4.7,

  exposed-modules:
    ProjectEuler.Problem_0231.Solution


Library p0808

  import:
    build-defaults

  build-depends:
    arithmoi >= 0.13.0.0,
    base >=4.7,
    containers,
    integer-roots,

  exposed-modules:
    ProjectEuler.Problem_0808.Solution
